<resources>
    <string name="app_name">Lets talk about</string>
    <string name="emptySting">Здесь будут ваши темы для разговоров.
        Чтобы добавить новую тему — нажмите кнопку [ + ] внизу экрана</string>
    <string name="random">[ или ещё ]</string>
    <string name="write_theme">[ + ]</string>
    <string name="themes_screen_1">[ экран тем ]</string>
    <string name="About_talk">о чём говорить</string>
    <string name="themes_screen_2">←[ экран тем ]</string>
    <string name="new_theme">Новая тема</string>
    <string name="warning">Тема не больше 140 букв</string>
    <string name="my_themes">мои темы для разговора</string>
    <string name="dv">декоративный вектор</string>
    <string name="um">меню пользовательских тем</string>
    <string name="dt">удалить пользовательскую тему</string>
    <string name="st">сохранить пользовательскую тему</string>
    <string name="hint"><font size="10"> </font></string>
</resources>